tests/neg/i3745b.scala
import scala.collection.{ Seq, Seq as _ } // error: Seq is renamed twice
